# mdpl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bootstrap_build/: example1_protected.h  example1_public.h
cmake/: Cache.cmake  CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
code_samples/: example1.mdpl  example2.mdpl  features_to_add.md
src/: pch.h  pch.hpp
src/common/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer.inl  file_access.cpp  file_access.hpp  mdpl_common.c  mdpl_common.h  mdpl_common.hpp  str_functions.c  str_functions.cpp  str_functions.h  str_functions.hpp  system_headers.hpp
src/compiler/: CMakeLists.txt  args.cpp  args.hpp  compile.cpp  compile.hpp  link.cpp  main.c  main.cpp  parser.c  parser.h  tokeniser.c  tokeniser.h
src/compiler-cpp/: args.cpp  compile.hpp  link.hpp
src/compiler-py/: enums.py  mdpl.py  passer.py  tokenise.py  transpiler.py
src/runtime_lib/: CMakeLists.txt  allocation_tracker.c  allocation_tracker.cpp  allocation_tracker.h  allocation_tracker.hpp  allocator.c  allocator.cpp  allocator.h  allocator.hpp  mdpl_error.c  mdpl_error.cpp  mdpl_error.h  mdpl_error.hpp  test_runtime_lib.c  test_runtime_lib.cpp
src/standard_lib/: CMakeLists.txt  basic_list_template.cpp  basic_list_template.hpp  mdpl_string.c  mdpl_string.cpp  mdpl_string.h  short_list_template.c  short_list_template.cpp  short_list_template.h  string.cpp  string.hpp  test_standard_lib.c  test_standard_lib.cpp
